<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:animateLayoutChanges="true"
    tools:context=".AutomationActivity">


    <EditText
        android:id="@+id/title_et"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/automation_title"
        android:inputType="text"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:lines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <androidx.core.widget.NestedScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        app:layout_constraintBottom_toTopOf="@id/bottom_button_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/target_tv"
                        android:textSize="20sp"
                        android:text="@string/target_cube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="#35000000"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                    <Spinner
                        android:id="@+id/cubelist_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/trigger_tv"
                        android:textSize="20sp"
                        android:text="@string/target_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="#35000000"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <ToggleButton
                        android:id="@+id/target_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/delay_tv"
                        android:text="@string/delay"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="#35000000"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/delay_et"
                            android:inputType="number"
                            android:layout_marginStart="4dp"
                            android:text="0"
                            android:lines="1"
                            android:imeOptions="actionDone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text="ms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/day_tv"
                        android:text="@string/days"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="#35000000"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:id="@+id/select_days"
                        android:padding="6dp"
                        android:textColor="@color/black"
                        android:text="@string/select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_tv"
                        android:text="@string/time"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="#35000000"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>


                    <TextView
                        android:id="@+id/select_time"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:text="@string/select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/conditions_tv"
                        android:text="@string/conditions"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="#35000000"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/condition_list"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <ImageView
                        android:id="@+id/add_condition_bt"
                        android:src="@drawable/ic_add"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




    <LinearLayout
        android:id="@+id/bottom_button_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/delete_btn"
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/save_btn"
            android:layout_marginStart="12dp"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>